# book-db

./: README.md  docker-compose.yml  integration_tests.py
.github/workflows/: deploy.yml  vaildate_backend.yml  validate_frontend.yml  validate_frontent.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/20210516133957_create_books_table/: up.sql
backend/src/: book.rs  main.rs
book-db/: package-lock.json  package.json
book-db/src/: App.svelte  Book.svelte  Books.svelte
frontend/: .eslintrc.js  Dockerfile  package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/src/: AddBook.svelte  App.svelte  Book.svelte  Books.svelte  Environment.ts  stores.ts
frontend/src/@types/: node.augmentations.d.ts
frontend/src/__tests__/: book.test.ts
