[package]
name = "book-db"
version = "0.1.0"
authors = ["Rickard Andersson <dunklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json", "diesel_postgres_pool"] }
serde = { version = "1.0.126", features = ["derive"] }
diesel = { version = "1.4.6", default-features = false, features = ["postgres"] }
diesel_migrations = "1.4.0"
