[package]
name = "book-db"
version = "0.1.0"
authors = ["Rickard Andersson <dunklas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", default-features = false, features = ["json", "diesel_postgres_pool"] }
serde = { version = "1.0.126", features = ["derive"] }
diesel = { version = "1.4.6", default-features = false, features = ["postgres"] }
diesel_migrations = "1.4.0"
