[package]
name = "book-db"
version = "0.1.0"
authors = ["Rickard Andersson <dunklas@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev", features = ["json"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", version = "0.1.0-dev", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.126", features = ["derive"] }
diesel = { version = "1.4.6", default-features = false, features = ["postgres"] }
diesel_migrations = "1.4.0"
